--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,9 +13,7 @@
       <button type="submit">Save</button>
     </form>
 
-    <h2>Journal Entries</h2>
-
-    <ul id="entries-list"></ul>
+    <a href="entries.html">View Journal Entries</a>
 
     <script src="scripts.js"></script>
   </body>
